--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
         {
             "name": "jaronoun",
             "email": "58861137+jaronoun@users.noreply.github.com"
+        },
+        {
+            "name": "Dorien Kuperus",
+            "email": "d.kuperus@st.hanze.nl"
         }
     ],
     "require": {
