--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,10 @@
     "name": "jaron/php-framework",
     "autoload": {
         "psr-4": {
-            "Isoros\\": "app/",
-            "ORM\\": "orm/src/"
+            "Isoros\\": "app/"
+        },
+        "psr-0": {
+            "": "app/"
         }
     },
     "authors": [
@@ -17,7 +19,13 @@
         }
     ],
     "require": {
-      "ext-pdo": "*",
-        "twbs/bootstrap": "5.3.0-alpha2"
+        "php": "^7.3|^8.0",
+        "ext-pdo": "*",
+        "twbs/bootstrap": "5.3.0-alpha2",
+        "php-di/php-di": "^7.0",
+        "psr/http-message": "^1.0",
+        "psr/container": "^2.0",
+        "nyholm/psr7": "^1.4",
+        "psr/http-server-middleware": "^1.0"
     }
 }
