--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     ],
     "require": {
       "ext-pdo": "*",
-        "twbs/bootstrap": "5.3.0-alpha2"
+        "twbs/bootstrap": "5.3.0-alpha2",
+        "psr/http-message": "^2.0"
     }
 }
