--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "require": {
       "ext-pdo": "*",
         "twbs/bootstrap": "5.3.0-alpha2",
-        "psr/http-message": "^2.0"
+        "psr/http-message": "^1.0",
+        "psr/http-server-middleware": "^1.0",
+        "psr/container": "^2.0",
+        "php-di/invoker": "^2.3"
     }
 }
